--- a/.github/workflows/main_swfreelinks.yml
+++ b/.github/workflows/main_swfreelinks.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy WAR app to Azure Web App - swfreelinks
+name: Build and deploy JAR app to Azure Web App - swfreelinks
 
 on:
   push:
@@ -20,6 +20,9 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: '11'
+
+    - name: Copy placeholder properties file into right location 
+      run: mv linktrack/src/mainresources/application.properties.prod linktrack/src/mainresources/application.properties
 
     - name: Build with Maven
       run: mvn clean install -f linktrack/pom.xml
